Sat May 20 14:28:39 BST 2006  Olly Betts <olly@survex.com>

	* tcl8/smoketest.tcl: Send error messages to stderr.
	* tcl8/smoketest.tcl: Add test of exception handling.

Sat May 20 09:24:46 BST 2006  Olly Betts <olly@survex.com>

	* python/smoketest.py: Add test of exception handling.

Sat May 20 06:18:43 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Specify required automake version in
	  the call to AM_INIT_AUTOMAKE in configure.ac.

Fri May 19 05:35:01 BST 2006  Olly Betts <olly@survex.com>

	* php/smoketest.php: Work out the name of the module we need to load.
	  Check the return value of dl().

Thu May 18 19:18:00 BST 2006  Olly Betts <olly@survex.com>

	* java/native/Query.cc: Correct two misuses of delete to delete[].
	  Fixes bug#78.

Thu May 18 18:27:16 BST 2006  Olly Betts <olly@survex.com>

	* python/Makefile.am: xapian.pyc can't be generated until _xapian.la
	  has been built, so add an explicit dependency so that this works
	  reliably in parallel builds.  Fixes bug#77.

Wed May 17 05:35:59 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: If we're building with GCC 3.4 or higher, pass
	  -fvisibility=hidden when compiling SWIG generated code which makes
	  the compiled modules a few percent smaller and perhaps a little
	  faster.

Mon May 15 23:34:55 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Fixed check for PYTHON_PATHSEP to use $PYTHON rather
	  than python, and also report the check and its result to the user.

Mon May 15 05:03:19 BST 2006  Olly Betts <olly@survex.com>

	* NEWS: Fix the recent headings which said "Xapian-core" to say
	  "Xapian-bindings".

Mon May 15 02:54:25 BST 2006  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Version 0.9.6.

Sun May 14 04:15:07 BST 2006  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: Fix compiling SmokeTest.cs when srcdir !=
	  builddir.

Sun May 14 03:26:11 BST 2006  Olly Betts <olly@survex.com>
